--- a/myProject/CSS Framework/Bootstrap POS/index.html
+++ b/myProject/CSS Framework/Bootstrap POS/index.html
@@ -56,7 +56,9 @@
 </section>
 
 <section class="container" style="padding-top: 40px;font-size: 20px">
-    Customer
+
+<img style="width: 20px;
+     height: 20px;display: inline-block" src="assets/img/icons8-customer-64.png" alt=""><h5>Customer</h5>
 </section>
 <section class="container" style="background-color: #efefef">
 
@@ -141,9 +143,9 @@
         <table class="table">
             <thead class="table-dark">
             <tr>
+                <th scope="col">Customer Id</th>
                 <th scope="col">Customer Name</th>
-                <th scope="col">Age</th>
-                <th scope="col">Tp</th>
+                <th scope="col">Address</th>
                 <th scope="col">Salary</th>
             </tr>
             </thead>
