--- a/myProject/CSS Framework/SPA/index.html
+++ b/myProject/CSS Framework/SPA/index.html
@@ -136,30 +136,34 @@
                 <div class="mb-3">
                     <label class="form-label" for="custID">Customer ID</label>
                     <input class="form-control" id="custId" placeholder="Customer ID" type="text">
+                    <p><small class="text-danger p-1" id="error"></small></p>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="custName">Customer Name</label>
                     <input class="form-control" id="custName" placeholder="Customer Name" type="text">
+                    <p><small class="text-danger p-1" id="error1"></small></p>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="custAddress">Customer Address</label>
                     <input class="form-control" id="custAddress" placeholder="Customer Address" type="text">
+                    <p><small class="text-danger p-1" id="error2"></small></p>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="custTP">Customer Tp</label>
                     <input class="form-control" id="custTP" placeholder="Customer Tp" type="text">
+                    <p><small class="text-danger p-1" id="error3"></small></p>
                 </div>
             </div>
         </section>
         <section style="padding: 20px">
-            <button class="btn btn-danger" type="button">Delete</button>
+            <button class="btn btn-danger" id="updateCustomer" type="button">Update</button>
             <button class="btn btn-primary" type="button">Details</button>
             <button class="btn btn-success" type="button">Clear</button>
         </section>
 
         <section class="row mt-4">
             <div class="col">
-                <table class="table table-hover">
+                <table id="tableCus" class="table table-hover">
                     <thead class="bg-danger text-white">
                     <tr>
                         <th>Customer ID</th>
@@ -211,30 +215,34 @@
             </form>
 
             <section class="col-12 col-md-3" style="display: inline-block">
-                <button id="saveItem" class="btn btn-primary" type="button">New Item</button>
+                <button class="btn btn-primary" id="saveItem" type="button">New Item</button>
                 <button class="btn btn-warning" type="button">View All Items</button>
             </section>
             <div class="col-12 col-md-5">
                 <div class="mb-3">
                     <label class="form-label" for="itemCode">Item Code</label>
                     <input class="form-control" id="itemCode" placeholder="Item Code" type="text">
+                    <p><small class="text-danger p-1" id="error5"></small></p>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="itemName">Item Name</label>
                     <input class="form-control" id="itemName" placeholder="Item Name" type="text">
+                    <p><small class="text-danger p-1" id="error6"></small></p>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="itemQty">Item Qty</label>
                     <input class="form-control" id="itemQty" placeholder="Item Qty" type="text">
+                    <p><small class="text-danger p-1" id="error7"></small></p>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="itemPrice">Item Price</label>
                     <input class="form-control" id="itemPrice" placeholder="Item Price" type="text">
+                    <p><small class="text-danger p-1" id="error8"></small></p>
                 </div>
             </div>
         </section>
         <section style="padding: 20px">
-            <button class="btn btn-danger" type="button">Delete</button>
+            <button id="updateItem" class="btn btn-danger" type="button">Update</button>
             <button class="btn btn-primary" type="button">Details</button>
             <button class="btn btn-success" type="button">Clear</button>
         </section>
@@ -242,7 +250,7 @@
 
         <section class="row mt-4">
             <div class="col">
-                <table class="table table-hover">
+                <table id="tableIte" class="table table-hover">
                     <thead class="bg-danger text-white">
                     <tr>
                         <th scope="col">Item Code</th>
@@ -436,56 +444,50 @@
     /*Table Data*/
 
     /*Customer*/
+    enableBtn();
 
     $("#custId").keydown(function (event) { // event data object
 
         if (event.key == "Enter") {
-            $("#custName").focus();
+            if (cuId == 1) {
+                $("#custName").focus();
+            } else {
+                alert("wrong Input");
+            }
         }
     });
 
     $("#custName").keydown(function (event) { // event data object
         if (event.key == "Enter") { // if the enter key press
-            $("#custAddress").focus();
+            if (cuName == 1) {
+                $("#custAddress").focus();
+            } else {
+                alert("Wrong Input");
+            }
         }
     });
 
     $("#custAddress").keydown(function (event) { // event data object
         if (event.key == "Enter") { // if the enter key press
-            $("#custTP").focus();
+            if (cuAddress == 1) {
+                $("#custTP").focus();
+            } else {
+                alert("Wrong Input");
+            }
         }
     });
 
     $("#custTP").keydown(function (event) { // event data object
         if (event.key == "Enter") { // if the enter key press
-            $("#customerTable>tr").off("click");
-
-            let customerID = $("#custId").val();
-            let customerName = $("#custName").val();
-            let customerAddress = $("#custAddress").val();
-            let customersalary = $("#custTP").val();
-
-            let row = `<tr><td>${customerID}</td><td>${customerName}</td><td>${customerAddress}</td><td>${customersalary}</td></tr>`;
-
-            $("#customerTable").append(row);
-
-            $("#customerTable>tr").click(function () {
-
-                let cusID = $(this).children(":eq(0)").text(); // select first td and get text
-                let cusName = $(this).children(":eq(1)").text();
-                let cusAddress = $(this).children(":eq(2)").text();
-                let cusTP = $(this).children(":eq(3)").text();
-
-                $("#custId").val(cusID);
-                $("#custName").val(cusName);
-                $("#custAddress").val(cusAddress);
-                $("#custTP").val(cusTP);
-
-            });
+            if (cuTp == 1) {
+                saveCus();
+            } else {
+                alert("Wrong Input");
+            }
         }
     });
 
-    $("#saveCustomer").click(function () {
+    function saveCus() {
         $("#customerTable>tr").off("click");
 
         let customerID = $("#custId").val();
@@ -498,7 +500,7 @@
         $("#customerTable").append(row);
 
         $("#customerTable>tr").click(function () {
-
+            var rIndex = this.rowIndex;
             let cusID = $(this).children(":eq(0)").text(); // select first td and get text
             let cusName = $(this).children(":eq(1)").text();
             let cusAddress = $(this).children(":eq(2)").text();
@@ -509,11 +511,114 @@
             $("#custAddress").val(cusAddress);
             $("#custTP").val(cusTP);
 
+            console.log(rIndex);
+            $("#updateCustomer").click(function () {
+                console.log(rIndex);
+                if(cusID==document.getElementById("custId").value) {
+                    tableCus.rows[rIndex].cells[1].innerHTML = document.getElementById("custName").value;
+                    tableCus.rows[rIndex].cells[2].innerHTML = document.getElementById("custAddress").value;
+                    tableCus.rows[rIndex].cells[3].innerHTML = document.getElementById("custTP").value;
+                }
+            });
         });
 
+        $("#customerTable>tr").dblclick(function () {
+            let result = confirm("are you suwr?");
+            if (result) {
+                $(this).remove();
+            }
+        });
+
+    }
+
+    $("#saveCustomer").click(function () {
+        saveCus();
     });
 
+    // validation Customer
 
+    var cuId = 0;
+    var regExCusID = /^(C00-)[0-9]{3,4}$/;
+    $("#custId").keyup(function () {
+        let input = $("#custId").val();
+        if (regExCusID.test(input)) {
+            $("#custId").css('border', '2px solid green');
+            cuId = 1;
+            enableBtn();
+            $("#error").text("Success");
+        } else {
+            $("#custId").css('border', '2px solid red');
+            cuId = 0;
+            enableBtn();
+            $("#error").text("Wrong format : C00-001");
+        }
+    });
+
+    var cuName = 0;
+    var regExCusName = /^[A-Za-z][A-Za-z_]{3,30}$/;
+    $("#custName").keyup(function () {
+        let input = $("#custName").val();
+        if (regExCusName.test(input)) {
+            $("#custName").css('border', '2px solid green');
+            cuName = 1;
+            enableBtn();
+            $("#error1").text("Success");
+        } else {
+            $("#custName").css('border', '2px solid red');
+            cuName = 0;
+            enableBtn();
+            $("#error1").text("Wrong format : Kavinda");
+        }
+    });
+
+    var cuAddress = 0;
+    var regExCusAddress = /^[a-zA-Z0-9]{4,}[ ][a-zA-Z]{4,}$/;
+    $("#custAddress").keyup(function () {
+        let input = $("#custAddress").val();
+        if (regExCusAddress.test(input)) {
+            $("#custAddress").css('border', '2px solid green');
+            cuAddress = 1;
+            enableBtn();
+            $("#error2").text("Success");
+        } else {
+            $("#custAddress").css('border', '2px solid red');
+            cuAddress = 0;
+            enableBtn();
+            $("#error2").text("Wrong format : Galle Mapalagama");
+        }
+    });
+
+    var cuTp = 0;
+    var regExCusTp = /^(077|071|078|075|076|072|074)[-]?[0-9]{7}$/;
+    $("#custTP").keyup(function () {
+        let input = $("#custTP").val();
+        if (regExCusTp.test(input)) {
+            $("#custTP").css('border', '2px solid green');
+            cuTp = 1;
+            enableBtn();
+            $("#error3").text("Success");
+        } else {
+            $("#custTP").css('border', '2px solid red');
+            cuTp = 0;
+            enableBtn();
+            $("#error3").text("Wrong format : 0710000000");
+        }
+    });
+
+    function enableBtn() {
+        const saveCustomerBtn = document.getElementById("saveCustomer");
+        const updateCustomerBtn = document.getElementById("updateCustomer");
+        saveCustomerBtn.disabled = true;
+        updateCustomerBtn.disabled = true;
+        var isTrue = (cuId + cuName + cuAddress + cuTp) == 4;
+        if (isTrue) {
+            saveCustomerBtn.disabled = false;
+            updateCustomerBtn.disabled = false;
+        }
+    }
+
+
+    /*item*/
 
     $("#itemCode").keydown(function (event) { // event data object
 
@@ -536,49 +641,29 @@
 
     $("#itemPrice").keydown(function (event) { // event data object
         if (event.key == "Enter") { // if the enter key press
-            $("#itemTable>tr").off("click");
-
-            let itemCode = $("#itemCode").val();
-            let itemName = $("#itemName").val();
-            let itemQty = $("#itemQty").val();
-            let itemPrice = $("#itemPrice").val();
-
-            let row = `<tr><td>${itemCode}</td><td>${itemName}</td><td>${itemQty}</td><td>${itemPrice}</td></tr>`;
-
-            $("#itemTable").append(row);
-
-            $("#itemTable>tr").click(function () {
-
-                let itemCode = $(this).children(":eq(0)").text(); // select first td and get text
-                let itemName = $(this).children(":eq(1)").text();
-                let itemQty = $(this).children(":eq(2)").text();
-                let itemPrice = $(this).children(":eq(3)").text();
-
-                $("#itemCode").val(itemCode);
-                $("#itemName").val(itemName);
-                $("#itemQty").val(itemQty);
-                $("#itemPrice").val(itemPrice);
-
-            });
+            saveItemNow();
         }
     });
 
     $("#saveItem").click(function () {
 
+        saveItemNow();
+    });
+
+    function saveItemNow() {
         $("#itemTable>tr").off("click");
 
         let itemCode = $("#itemCode").val();
         let itemName = $("#itemName").val();
         let itemQty = $("#itemQty").val();
-        let itemPrice = $("#itemQty").val();
+        let itemPrice = $("#itemPrice").val();
 
         let row = `<tr><td>${itemCode}</td><td>${itemName}</td><td>${itemQty}</td><td>${itemPrice}</td></tr>`;
 
         $("#itemTable").append(row);
 
-
         $("#itemTable>tr").click(function () {
-
+            var rIndex2 = this.rowIndex;
             let itemCode = $(this).children(":eq(0)").text(); // select first td and get text
             let itemName = $(this).children(":eq(1)").text();
             let itemQty = $(this).children(":eq(2)").text();
@@ -589,8 +674,106 @@
             $("#itemQty").val(itemQty);
             $("#itemPrice").val(itemPrice);
 
+            $("#updateItem").click(function () {
+                if(itemCode==document.getElementById("itemCode").value) {
+                    tableIte.rows[rIndex2].cells[1].innerHTML = document.getElementById("itemName").value;
+                    tableIte.rows[rIndex2].cells[2].innerHTML = document.getElementById("itemQty").value;
+                    tableIte.rows[rIndex2].cells[3].innerHTML = document.getElementById("itemPrice").value;
+                }
+            });
         });
+
+        $("#itemTable>tr").dblclick(function () {
+            let result = confirm("are you suwr?");
+            if (result) {
+                $(this).remove();
+            }
+        });
+    }
+
+    // validation Item
+
+    var itemCod = 0;
+    var regExItemCode = /^(I00-)[0-9]{3,4}$/;
+    $("#itemCode").keyup(function () {
+        let input = $("#itemCode").val();
+        if (regExItemCode.test(input)) {
+            $("#itemCode").css('border', '2px solid green');
+            itemCod = 1;
+            enableItemBtn();
+            $("#error5").text("Success");
+        } else {
+            $("#itemCode").css('border', '2px solid red');
+            itemCod = 0;
+            enableItemBtn();
+            $("#error5").text("Wrong format : I00-001");
+        }
     });
+
+    var itemNam = 0;
+    var regExItemName = /^[A-Za-z][A-Za-z0-9_]{4,20}$/;
+    $("#itemName").keyup(function () {
+        let input = $("#itemName").val();
+        if (regExItemName.test(input)) {
+            $("#itemName").css('border', '2px solid green');
+            itemNam = 1;
+            enableItemBtn();
+            $("#error6").text("Success");
+        } else {
+            $("#itemName").css('border', '2px solid red');
+            itemNam = 0;
+            enableItemBtn();
+            $("#error6").text("Wrong format : redRice");
+        }
+    });
+
+    var itemQt = 0;
+    var regExItemQty = /^[1-9][0-9]{0,2}$/;
+    $("#itemQty").keyup(function () {
+        let input = $("#itemQty").val();
+        if (regExItemQty.test(input)) {
+            $("#itemQty").css('border', '2px solid green');
+            itemQt = 1;
+            enableItemBtn();
+            $("#error7").text("Success");
+        } else {
+            $("#itemQty").css('border', '2px solid red');
+            itemQt = 0;
+            enableItemBtn();
+            $("#error7").text("Wrong format : 98");
+        }
+    });
+
+    var itemPric = 0;
+    var regExItemPrice = /^[1-9][0-9]{1,3}([.][0-9]{2})?$/;
+    $("#itemPrice").keyup(function () {
+        let input = $("#itemPrice").val();
+        if (regExItemPrice.test(input)) {
+            $("#itemPrice").css('border', '2px solid green');
+            itemPric = 1;
+            enableItemBtn();
+            $("#error8").text("Success");
+        } else {
+            $("#itemPrice").css('border', '2px solid red');
+            itemPric = 0;
+            enableItemBtn();
+            $("#error8").text("Wrong format : 100 / 100.00");
+        }
+    });
+
+    function enableItemBtn() {
+        const saveItemBtn = document.getElementById("saveItem");
+        const updateItemBtn = document.getElementById("updateItem");
+
+        saveItemBtn.disabled = true;
+        updateItemBtn.disabled=true;
+        var isTrue = (itemCod + itemNam + itemQt + itemPric) == 4;
+        if (isTrue) {
+            saveItemBtn.disabled = false;
+            updateItemBtn.disabled=false;
+        }
+    }
+
 </script>
 </body>
 </html>
